# wuzzln

./: .gitignore  Dockerfile  README.md  env.yml  pyproject.toml  run.sh
assets/js/: main.js
assets/style/: main.css
database/: create.sql
requirements/: common.txt  dev.txt
templates/: add.html  base.html  games.html  games_fragment.html  leaderboard.html  matchmaking.html  matchmaking_fragment.html  player.html  rules.html  toast.html  wrapped.html
tests/: test_data.py  test_matchmaking.py  test_statistics.py
tests/matchmaking/: optim.py  rand.py  test_optim.py
wuzzln/: app.py  data.py  database.py  matchmaking.py  rating.py  statistics.py  toast.py  utils.py
wuzzln/routes/: add.py  games.py  history.py  leaderboard.py  matchmaking.py  player.py  robots.py  rules.py  wrapped.py
