[project]
name = "wuzzln"
requires-python = ">=3.13"
version = "0.1"
dependencies = [
	"cachetools>=6.2.4",
	"litestar[standard]>=2.19.0",
	"trueskill>=0.4.5",
]

[tool.ruff]
line-length = 100

# https://docs.astral.sh/ruff/rules/
select = [
    "E",   # flake8
    "F",   # pyflakes
    "I",   # isort
    "S",   # bandit
    "EXE", # flake8 executable
]
ignore = [
    "D100",   # module docstring
    "ANN003", # **kwargs annotation
    "PTH123", # path.open
	"S101", # assert
	"S311", # random for crypto
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
	"pytest>=9.0.2"
]
